calc/permutation.h

//Ёкспортируемые функции класс IsomorphMatrices
extern "C" __declspec(dllexport) int IsomorphMatrices_Constructor(unsigned long matrixSize, unsigned long cellSize, unsigned char *mtxVectorOrig, unsigned char *mtxVectorModified);
extern "C" __declspec(dllexport) void IsomorphMatrices_Destructor(IsomorphMatrices *);
extern "C" __declspec(dllexport) void IsomorphMatrices_Transposition(IsomorphMatrices *,unsigned long vector[]);
extern "C" __declspec(dllexport) void IsomorphMatrices_SearchIsomorph(IsomorphMatrices *handler, unsigned long length, unsigned long vector[]);
extern "C" __declspec(dllexport) unsigned long *IsomorphMatrices_GetSubstitutions(IsomorphMatrices *handler, unsigned long index);
extern "C" __declspec(dllexport) unsigned long IsomorphMatrices_GetSubstitutionsCount(IsomorphMatrices *handler);
extern "C" __declspec(dllexport) double IsomorphMatrices_GetProgress(IsomorphMatrices *handler);
extern "C" __declspec(dllexport) void IsomorphMatrices_SearchStatisticsIsomorph(IsomorphMatrices *, char);
extern "C" __declspec(dllexport) unsigned long IsomorphMatrices_GetParts(IsomorphMatrices *, unsigned long);